# GF-only-SEM

./: .clang-format  .cmake-format.py  .gitignore  AGENTS.md  CMakeLists.txt  HANDOFF.md  README.md  env_setup.sh  format.sh  pyproject.toml
.sisyphus/plans/: forward.md  preprocess.md
.superpowers/sdd/: base.sha  task-1-brief.md  task-2-brief.md  task-3-brief.md  update_model_writer.py
compress/: AGENTS.md  CMakeLists.txt
compress/include/gf/: CheckpointWriter.h  ChunkingStrategy.h  CompressionFilter.h  PrecisionPolicy.h
docs/: deferred.md  design-decisions.md  math.md  plan-complete-postprocess-tiling.done.md  workflow-comparison.md
docs/_archive/: 2026-07-16-pysv-coupling-debug.md  workflow-comparison.md
docs/design/: algorithm-verification.md  compress.md  cpml.md  fix-plan.md  forward.md  gpu.md  greenfun.md  mesh.md  model.md  naming-convention.md  postprocess.md  preprocess.md
docs/scratch/: handoff-2026-06-23-halfspace-workflow-parameter-redesign.md  session-summary-2026-06-22.md  task1-workflow-test.md  task2-fix-vertex-sorting.md
docs/superpowers/design/: compress.md  forward.md  gpu.md  mesh.md  postprocess.md  preprocess.md
docs/superpowers/plans/: 2026-06-08-compress.md  2026-06-08-forward.md  2026-06-08-mesh.md  2026-06-08-postprocess.md  2026-06-08-preprocess.md  2026-06-23-halfspace-workflow-parameter-redesign.md  2026-07-10-greenfun-reader.md  2026-07-12-cg-sem-assembly-fix.md  2026-07-14-buried-source.md  2026-07-16-pysv-coupling-debug.md  2026-07-17-global-node-numbering.md  2026-07-19-gll-tile-output.md
docs/superpowers/specs/: 2026-06-23-halfspace-workflow-parameter-redesign-design.md  2026-07-17-global-node-numbering-design.md  2026-07-19-gll-tile-design.md
examples/: README.md
examples/halfspace/: .gitignore  compare.py  compare.sh  config.py  forward.sh  lib.sh  mesh.sh  mesh_gen.py  multi_compare.py  plot_compare.py  postprocess.sh  preprocess.sh  reference.py  run.sh  setenv.sh
examples/layer/: .gitignore  AGENTS.md  compare.sh  config.py  mesh_gen.py  multi_compare.py  postprocess.sh  reference.py  setenv.sh
forward/: AGENTS.md  CMakeLists.txt  PLAN_GPU_NATIVE.md
forward/elastic/: CMakeLists.txt
forward/elastic/src/: element_cpu.cpp  element_cuda.cu  main.cpp
forward/include/gf/: assembly.hpp  backend.hpp  cuda_check.h  cuda_device_manager.hpp  cuda_step.hpp  element.hpp  exchange.hpp  gll.hpp  io.hpp  logger.hpp  newmark.hpp  pml.hpp  record.hpp  solver.hpp  source.hpp  types.hpp
forward/share/: CMakeLists.txt
forward/share/include/gf/: CompressionFilter.h  assembly.hpp  backend.hpp  cuda_device_manager.hpp  cuda_step.hpp  element.hpp  exchange.hpp  io.hpp  logger.hpp  pml.hpp  record.hpp  restart.hpp  source.hpp  types.hpp
forward/share/src/: assembly.cpp  cuda_step.cu  exchange.cpp  exchange_noop.cpp  io.cpp  newmark.cpp  pml.cpp  record.cpp  restart.cpp  solver.cpp  source.cpp
forward/src/: assembly.cpp  cuda_step.cu  element.cpp  element_cpu.cpp  element_cuda.cu  exchange.cpp  exchange_noop.cpp  io.cpp  main.cpp  newmark.cpp  pml.cpp  record.cpp  restart.cpp  solver.cpp  source.cpp
forward/viscoelastic/: AGENTS.md  CMakeLists.txt
greenfun/: AGENTS.md  __init__.py  gll_interpolator.py  index_cache.py  interpolator.py  library.py  query.py  source_run.py
postprocess/: AGENTS.md  pyproject.toml
postprocess/_archive/: pyproject.toml
postprocess/_archive/src/gf_post/: __init__.py  writer.py
postprocess/_archive/tests/: test_reader.py
postprocess/cpp/: CMakeLists.txt  main.cpp  reader.hh  writer.hh
postprocess/src/gf_post/: __init__.py  assembly.py  cli.py  geometry.py  index.py  interpolate.py  reader.py  search.py  writer.py
postprocess/tests/: conftest.py  test_geometry.py  test_index.py  test_reader.py  test_search.py  test_writer.py
preprocess/: AGENTS.md  __init__.py  __main__.py  accelerator.py  boundary_detector.py  cfl_validator.py  cli.py  config_loader.py  config_writer.py  gll_geometry.py  model_loader.py  model_writer.py  partition.py  pml.py  pml_cpml.py  preflight.py  pyproject.toml  recording_map.py  source_locator.py  stage2_runner.py  stf_evaluator.py  topology_reader.py
preprocess/cpp/: CMakeLists.txt  gf_preprocess_cpp  main.cpp  stage2_main.cpp
scripts/: env_setup.sh
tests/: AGENTS.md  CMakeLists.txt  conftest.py  test_assembly.cpp  test_compress.cpp  test_element.cpp  test_element_cuda.cu  test_exchange.cpp  test_gll.cpp  test_integration.cpp  test_io.cpp  test_newmark.cpp  test_pml.cpp  test_postprocess_tile.cpp  test_record.cpp  test_source.cpp
tests/greenfun/: conftest.py  test_cli.py  test_index_cache.py  test_interpolator.py  test_library.py  test_source_run.py
tests/preprocess/: conftest.py  test_boundary_detector.py  test_cfl_validator.py  test_config_loader.py  test_config_writer.py  test_gll_geometry.py  test_model_loader.py  test_model_writer.py  test_partition.py  test_pml.py  test_pml.py.bak  test_recording_map.py  test_source_locator.py  test_stf_evaluator.py  test_topology_reader.py
tests/tools/: test_gmsh_to_hdf5.py  test_gmsh_to_hdf5_integration.py
tests/workflows/: conftest.py  regular_hex_mesh.py  test_halfspace_workflow.py  test_multi_elem_workflow.py
tools/: AGENTS.md  __init__.py  gmsh_to_hdf5.py  mesh2vtk.py  mesh_to_vtk.py  model2vtk.py  partition2vtk.py  wavefield2vtk.py  wavefield2vtk_detail.py
tools/_archive/: model2vtk.py  wavefield2vtk.py
tools/cpp/: CMakeLists.txt  h5io.hh  model2vtk.cpp  partition2vtk.cpp  topology.hh  vtk_writer.hh  wavefield2vtk.cpp  wavefield2vtk_detail.cpp
