[project]
name = "gf-calculation"
version = "0.1.0"
description = "3D viscoelastic SEM forward solver + post-hoc Green's function extraction"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["preprocess", "postprocess"]

[tool.uv.sources]
gf-post = { workspace = true }
gf-preprocess = { workspace = true }

[dependency-groups]
dev = [
    "gf-post",
    "gf-preprocess",
    "pytest>=7.0",
    "meshio>=5.0",
    "ruff>=0.15.20",
    "mdformat>=1.0.0",
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: production-scale tests skipped by default",
]

[tool.ruff]
target-version = "py310"
line-length = 99
[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
# Keep isort in sync: trailing-comma split conflicts with skip-magic-trailing-comma
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[tool.mdformat]
wrap = 99
number = false
