[project]
name = "gf-calculation"
version = "0.1.0"
description = "3D viscoelastic SEM forward solver + post-hoc Green's function extraction"
requires-python = ">=3.13"
dependencies = ["numpy>=1.24", "h5py>=3.9", "meshio>=5.0", "scipy>=1.11"]

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[tool.uv.workspace]
members = ["preprocess"]

[tool.uv.sources]

gf-preprocess = { workspace = true }

[dependency-groups]
dev = [
  "gf-preprocess",
  "pytest>=7.0",
  "ruff>=0.15.20",
  "mdformat>=1.0.0",
  "cmake-format>=0.6.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: production-scale tests skipped by default"]

[tool.ruff]
target-version = "py310"
line-length = 99
[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
# Keep isort in sync: trailing-comma split conflicts with skip-magic-trailing-comma
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
gmsh-to-hdf5 = "tools.gmsh_to_hdf5:main"
gf_greenquery = "greenfun.query:main"

[tool.setuptools.packages.find]
include = ["tools*", "greenfun*"]

[tool.mdformat]
wrap = 99
number = false
