[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[project]
name = "gf-preprocess"
version = "0.1.0"
description = "SEM preprocessor — GLL geometry, 3D model interpolation, partition"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "h5py>=3.9",
    "scipy>=1.11",
]

[project.scripts]
mesh2vtk = "tools.mesh2vtk:main"
partition2vtk = "tools.partition2vtk:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["tools*"]