# forward/viscoelastic/CMakeLists.txt
#
# Viscoelastic SEM solver with SLS attenuation.
# NOTE: Not yet connected to the build system — implementation deferred.
#
# When ready, uncomment in ../CMakeLists.txt:
#   add_subdirectory(viscoelastic)
# And build executables:
#   forward_viscoelastic_mpi
#   forward_viscoelastic_cuda
#   forward_viscoelastic_mpi_cuda